# report_generation

./: README.md
app/: Dockerfile  docker-compose.yml  pyproject.toml
app/events/: models.py  serializers.py  tasks.py  urls.py  views.py
app/events/migrations/: 0001_initial.py
app/events/templates/events/: homepage.html
app/myproject/: celery.py  settings.py  urls.py
